<resources>
    <string name="app_name">BrainList</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="circle">circle</string>
    <string name="logo">logo</string>
    <string name="empty" />
    <string name="registrarse">Registrarse</string>
    <string name="brainlist">BrainList</string>
    <string name="reg_strate">regístrate</string>
    <string name="reg_strate_aqu">regístrate aquí</string>
    <string name="email">Email:</string>
    <string name="iconlist">IconList</string>
    <string name="compras_hogar">Compras Hogar</string>
    <string name="add_btn">add_btn</string>
    <string name="remove_btn">remove_btn</string>
    <string name="nombre_de_la_lista">Nombre de la lista:</string>
    <string name="agregar_nueva_lista">Agregar nueva lista</string>
    <string name="nombre">Nombre</string>
    <string name="namelist">nameList</string>
    <string name="scrollbtn">scrollbtn</string>
    <string name="elegir_imagen">Elegir imagen:</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_item_a_la_lista">Agregar item a la lista</string>
    <string name="descripci_n">Descripción</string>
    <string name="t_tulo">Título</string>
    <string name="confirmar_contrase_a">Confirmar contraseña:</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="perfil">Perfil</string>
    <string name="borrar" />
    <string name="elegir_categoria">Elegir Categoria:</string>
    <string name="deletebtn">deletebtn</string>
</resources>