<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_list"
    tools:context=".AddList">

    <TextView
        android:id="@+id/tVName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/agregar_nueva_lista"
        android:textSize="30sp"
        android:textColor="@color/text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nombre_de_la_lista"
        android:textColor="@color/text"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVName" />

    <EditText
        android:id="@+id/eTNameList"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:background="@drawable/textview"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVTitle"
        app:layout_constraintVertical_bias="0.053"

        tools:ignore="labelFor" />

    <TextView
        android:id="@+id/tVIconName"
        android:layout_width="181dp"
        android:layout_height="33dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/elegir_imagen"
        android:textColor="@color/text"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/icon_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTNameList"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/icon_spinner"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginTop="34dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTNameList"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:background="@drawable/button_rounded"
        android:text="@string/agregar"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

</androidx.constraintlayout.widget.ConstraintLayout>