<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/brainlist"
        android:textSize="40sp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />


    <ScrollView
        android:id="@+id/sVBtn"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:contentDescription="@string/scrollbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0"
        app:layout_constraintVertical_bias="0.114">

    </ScrollView>

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_add"
        android:contentDescription="@string/add_btn"
        android:src="@drawable/add_icon"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sVBtn"
        app:layout_constraintVertical_bias="0.545" />


</androidx.constraintlayout.widget.ConstraintLayout>